--- a/index.htm
+++ b/index.htm
@@ -20,13 +20,12 @@
 			<div id="tools">
 				<input type='button' class='tool' id="pen" value="🖋️">
 				<input type='button' class='tool' id="cross" value="❌">
-
 			</div>
-			<div id="lives"></div>
+			<div id="lives"> </div>
 			<input type='button' id="newgame" value="New Game" onclick="restartGame();">
 		</div>
 
-	</div><br><br>
+	</div>
 	<div id="version"></div>
 	<script>
 	newGame();
