attempting to fix button alignment on mobile

--- a/index.htm
+++ b/index.htm
@@ -18,8 +18,10 @@
 		<div id="menubar">
 			<input type="hidden" value="pen" id="toolname">
 			<div id="tools">
-				<input type='button' class='tool' id="pen" value="🖋️">
-				<input type='button' class='tool' id="cross" value="❌">
+				<div id="pen" class='tool'>🖋️</div>
+				<div id="cross" class='tool'>❌</div>
+				<!--input type='button' class='tool' id="pen" value="🖋️">
+				<input type='button' class='tool' id="cross" value="❌"!-->
 			</div>
 			<div id="lives"> </div>
 			<input type='button' id="newgame" value="New Game" onclick="restartGame();">
